Add polymorphic example
